# lazy-logistics

./: ARCHITECTURE.md  Dockerfile  HACKDAY.md  PROMPT.md  example_usage.py  main.py  requirements.txt
app/: README.md  index.html  main.py  npm-shrinkwrap.json  package.json  vite.config.js
app/docs/: service-communication-diagram.md
app/models/: schemas.py
app/public/: index.html
app/services/: extraction.py  search.py  storage.py
app/src/: App.js  App.jsx
app/src/api/: index.js  supplierApi.js
app/src/components/: ApiTestButton.jsx  ErrorCard.jsx  Header.jsx  ResultsCard.jsx  SupplierCard.jsx  SupplierForm.jsx
app/src/hooks/: index.js  useApiTest.js  useSupplierExtraction.js
app/src/utils/: fetcher.js
app/utils/: deduplication.py
chatlogs/: 01_build_tool.md  02_troubleshoot_auth.md
docs/: README.md  enhancement-roadmap.md
server/: README.md  analyze_suppliers.py  clear_cache.py  deploy.sh  env.example  example_usage.py  pyproject.toml  search_cli.py
server/app/: __init__.py  config.py  main.py  main_mock.py
server/app/models/: schemas.py
server/app/services/: extraction.py  search.py  storage.py
server/app/utils/: deduplication.py
server/suppliers/: candidate_ignore_list.txt  supplier_analysis.json  supplier_ignore_list.txt  suppliers_aldi.json  suppliers_asda.json  suppliers_lidl.json  suppliers_morrisons.json  suppliers_sainsbury's.json  suppliers_tesco.json  suppliers_waitrose.json
server/tests/: test_api.py  test_deduplication.py  test_ignore_list.py  test_schemas.py
tests/: test_api.py  test_deduplication.py
